Fix advantages section tablet styles

--- a/src/scss/deco/_blob.scss
+++ b/src/scss/deco/_blob.scss
@@ -78,15 +78,15 @@
 
 .blob--4 {
     // positioning
-    right: 10px;
-    top: -40px;
+    right: -10px;
+    top: -30px;
 
     // box model
-    height: 81px;
-    width: 125px;
+    height: 72px;
+    width: 120px;
 
     // visual
-    background-image: url('./img/deco/blob-1.svg');
+    background-image: url('./img/deco/blob-5.svg');
 
     @include atTablet {
         // positioning
@@ -100,20 +100,20 @@
 
 .blob--5 {
     // positioning
-    left: 43px;
-    top: 780px;
+    left: 30px;
+    bottom: -35px;
 
     // box model
-    height: 69px;
-    width: 110px;
+    height: 72px;
+    width: 120px;
 
     // visual
-    background-image: url('./img/deco/blob-1.svg');
+    background-image: url('./img/deco/blob-5.svg');
 
     @include atTablet {
         // positioning
         left: -5px;
-        top: 615px;
+        bottom: 260px;
 
         // box model
         height: 107px;
