--- a/src/scss/deco/_deco.scss
+++ b/src/scss/deco/_deco.scss
@@ -220,7 +220,7 @@
 .deco--bean-5 {
     // positioning
     right: -50px;
-    top: 730px;
+    bottom: -50px;
 
     // box model
     height: 130px;
@@ -334,7 +334,7 @@
 .deco--choops-2 {
     // positioning
     left: -1px;
-    top: 800px;
+    bottom: -270px;
 
     // box model
     height: 295px;
@@ -345,7 +345,9 @@
 
     @include atTablet {
         // positioning
-        top: 640px;
+        // top: 640px;
+        bottom: -100px;
+        left: -40px;
 
         // box model
         height: 440px;
